force-app/main/default/objects/CARE_SaaS__c/CARE_SaaS__c.object-meta.xml
<CustomObject>
    <label>CARE SaaS</label>
    <nameField>
        <label>CARE SaaS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CARE SaaS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>