force-app/main/default/objects/CARE_SaaS__c/fields/CARE_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CARE_End_Date__c</fullName>
    <label>CARE End Date</label>
    <type>Date</type>
</CustomField>